stateDiagram-v2
initial --> cancelled: cancel
initial --> feasibilityChecked: feasibilityCheck
feasibilityChecked --> cancelled: cancel
feasibilityChecked --> reserved: reserve
reserved --> cancelled: cancel
reserved --> inactive: deactivate
inactive --> active: activate
active --> inactive: deactivate
active --> suspended: suspend
suspended --> active: activate
suspended --> terminated: terminate
terminated --> active: activate
active --> terminated: terminate
inactive --> terminated: terminate
reserved --> active: activate
feasibilityChecked --> active: activate
initial --> reserved: reserve
initial --> active: activate